--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Babel==2.15.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
 blinker==1.8.2
+build==1.2.1
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -26,6 +27,7 @@ Flask==3.0.3
 Flask-Cors==4.0.1
 fonttools==4.52.4
 fqdn==1.5.1
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -77,6 +79,7 @@ pure-eval==0.2.2
 pycparser==2.22
 Pygments==2.18.0
 pyparsing==3.1.2
+pyproject_hooks==1.1.0
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
@@ -102,6 +105,7 @@ typing_extensions==4.12.0
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.1
+waitress==3.0.0
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
