--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "npm install --prefix mp-plot-ui",
-    "start": "cd mp-plot-ui && npm run start",
+    "start": "cd mp-plot-ui && npm install && npm install -g serve && npm run build && rm -rf node_modules && serve -s build",
     "build": "cd mp-plot-ui && npm run build",
     "serve": "cd mp-plot-ui && npm run serve"
   }
