--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "node": "20.x"
   },
   "scripts": {
-    "start": "cd mp-plot-ui && npm install && npm install -g serve && npm run build && rm -rf node_modules && serve -s build",
+    "postinstall": "npm install --prefix mp-plot-ui",
+    "start": "cd mp-plot-ui  && npm run build && rm -rf node_modules && serve -s build",
     "build": "cd mp-plot-ui && npm run build",
-    "serve": "cd mp-plot-ui && npm run serve"
+    "serve": "serve -s mp-plot-ui/build"
+  },
+  "dependencies": {
+    "serve": "^14.2.3"
   }
 }
