--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "scripts": {
     "postinstall": "npm install --prefix mp-plot-ui",
-    "start": "cd mp-plot-ui  && npm run build && rm -rf node_modules && serve -s build",
-    "build": "cd mp-plot-ui && npm run build",
+    "build": "cd mp-plot-ui && npm run build && rm -rf node_modules",
+    "start": "serve -s mp-plot-ui/build",
     "serve": "serve -s mp-plot-ui/build"
   },
   "dependencies": {
